# YT_AI_NOTES

./: .gitignore  README.md  main.py  pyproject.toml
api/v1/: router.py
api/v1/endpoints/: auth.py  generate_note.py  transcription.py
core/: config.py  database.py
models/: db_models.py
schemas/: audio_schema.py  db_schema.py  yt_schema.py
services/: audio_download_service.py  audio_transcribe_service.py  auth_service.py  generate_notes_service.py  yt_title_service.py
static/: app.js  style.css
templates/: index.html  signin.html  signup.html
templates/partials/: blog_result.html
