[project]
name = "yt-ai-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.135.3",
    "faster-whisper>=1.2.1",
    "google-genai>=1.71.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
