[project]
name = "yt-ai-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.135.3",
    "faster-whisper>=1.2.1",
    "google-genai>=1.71.0",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
